[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"
description = "A keylogger server and client"

[dependencies]
rdev = "0.5"
tokio = { version = "1.42", features = ["full", "tracing"] }
tracing = "0.1.*"
tracing-subscriber = "0.3.*"
crc32fast = "1.4.*"
 
 [lib]
 name = "__core__"
 path = "src/lib.rs"

 [[bin]]
name = "server"
path = "src/server.rs"
 
 [[bin]]
name = "client"
path = "src/client.rs"
